2001-12-16  Roland McGrath  <roland@frob.com>

	* hurd/intr-msg.c (_hurd_intr_rpc_mach_msg): Add `break' after
	`default:' to silence new GCC warning.
	Rewrite cast of lvalue to silence new GCC warning.

	* sysdeps/mach/hurd/i386/init-first.c: Avoid multi-line strings in asm.

	* sysdeps/mach/hurd/spawni.c: New file, by me with a
	couple fixes by Neal H Walfield <neal@cs.uml.edu>.

2001-12-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/strstr.c (strstr): Update.  New optimized version.
	Patch by Stephen R. van den Berg.

	* crypt/md5.h: Define md5_uintptr.

2001-12-13  Ulrich Drepper  <drepper@redhat.com>

	* libio/tst_swprintf.c (main): Add test for string argument with
	zero precision.
	* stdio-common/Makefile (tests): Add tst-sprintf.
	* stdio-common/tst-sprintf.c: New file.

2001-12-13  Andreas Schwab  <schwab@suse.de>

	* stdio-common/vfprintf.c (process_string_arg): Correctly handle
	zero precision with wide character string format.

2001-12-13  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/posix/cuserid.c (cuserid): If we don't find the UID,
	but have a user supplied buffer, return the empty buffer, not NULL.

2001-12-13  Ulrich Drepper  <drepper@redhat.com>

	* crypt/md5.c (md5_process_bytes): Correct handling of alignment.
	Patch by Eric Sharkey <sharkey@netrics.com>.

	* crypt/md5test.c (main): Add test for multiple calls to
	__md5_process_bytes to itererate over input string.

2001-12-12  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_findserv.c (__nis_findfastest_with_timeout): Mostly the code
	from __nis_findfastest.  Take timeout value from parameter.
	(__nis_findfastest): Call __nis_findfastest_with_timeout repeatedly.
	* nis/nis_intern.h: Define parameters controlling __nis_findfastest
	[PR libc/2520].  Patch by Alexander Belopolsky <alexb@rentec.com>.

2001-12-12  Andreas Jaeger  <aj@suse.de>

	* configure.in: Use -nostartfiles -nostdlib for linker tests, fix
	combreloc test so that it works in this case.
